--- a/dev/scss/base/_helpers.scss
+++ b/dev/scss/base/_helpers.scss
@@ -3,3 +3,18 @@
   border-radius: $radius;
   background-clip: padding-box;  /* stops bg color from leaking outside the border: */
 }
+.rounded{
+	@include border-radius(150%);
+}
+
+.text-left{
+	text-align: left;
+}
+
+.text-center{
+	text-align: center;
+}
+
+.text-right{
+	text-align: right;
+}
