--- a/dev/scss/base/_global.scss
+++ b/dev/scss/base/_global.scss
@@ -1,11 +1,13 @@
 body{
 	background-color: $solid-bg;
+
 }
 
 .site-wrapper {
 	position: relative;
 	overflow: hidden;
 	width: 100%;
+	z-index: 0;
 }
 
 header{
@@ -16,6 +18,7 @@ header{
 	padding: 20px 0 15px 0;
 	width: 100%;
 	@include clearfix;
+	
 }
 
 section{
