add page to scss

--- a/dev/scss/base/_global.scss
+++ b/dev/scss/base/_global.scss
@@ -40,3 +40,6 @@ section{
 @import "components/footer";
 @import "components/testimonials";
 @import "components/register-box";
+
+// Import pages
+@import "components/pages"
