--- a/dev/scss/base/_settings.scss
+++ b/dev/scss/base/_settings.scss
@@ -7,10 +7,11 @@ $base-font-size: 17px;
 $base-line-height: 31px;
 $small-font-size: 14px;
 $small-line-height: 26px;
-$global-margin: 30px;
+$global-margin: 40px;
 
 // Colors
 $primary: #2BC9FF;
+$primary-opaque: rgba(43, 201, 255, 0.05);
 $secondary: #0f608d;
 $secondary-dark: #004670;
 $secondary-opaque: rgba(0, 70, 112, 0.2);
