--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,8 +1,9 @@
 @import "base/reset";
 @import 'bourbon';
-@import "base/helpers";
 @import "base/settings";
+@import "base/helpers";
 @import "../vendor/icomoon/style";
+@import "base/buttons-links"; 
 @import "base/typography"; 
 @import "base/grid";
 @import "base/global";
