adding speakers page

--- a/dev/scss/base/_settings.scss
+++ b/dev/scss/base/_settings.scss
@@ -12,6 +12,7 @@ $global-margin: 40px;
 // Colors
 $primary: #2BC9FF;
 $primary-opaque: rgba(43, 201, 255, 0.05);
+$primary-opaque--low: rgba(43, 201, 255, 0.02);
 $secondary: #0f608d;
 $secondary-dark: #004670;
 $secondary-opaque: rgba(0, 70, 112, 0.2);
