add exhibitor functionality

--- a/dev/scss/base/_global.scss
+++ b/dev/scss/base/_global.scss
@@ -82,6 +82,7 @@ section{
 @import "components/footer";
 @import "components/testimonials";
 @import "components/register-box";
+@import "components/slider";
 
 // Import Pages
 @import "pages/home";
@@ -90,3 +91,4 @@ section{
 @import "pages/sponsors";
 @import "pages/register";
 @import "pages/speakers";
+@import "pages/exhibitors";
