--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -41,6 +41,11 @@ html {
     color: $off-white;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
+
+    @include mobile{
+        font-size: 14px;
+        line-height: 25px;
+    }
 }
 
 .small{
@@ -66,6 +71,11 @@ h1, h2, h3, h4, h5{
 h1{
     font-size: 41px;
     line-height: 50px;
+
+    @include mobile{
+        font-size: 28px;
+        line-height: 33px;
+    }
 }
 
 h2{
