--- a/dev/scss/base/components/_register-box.scss
+++ b/dev/scss/base/components/_register-box.scss
@@ -8,6 +8,12 @@
 	margin: 0 auto;
 	border: 1px solid $secondary;
 
+	@include mobile{
+		max-width: 100%;
+		border-left: none;
+		border-right: none;
+	}
+
 	h3{
 		letter-spacing: 2px;
 		text-transform: uppercase;
