--- a/dev/scss/base/components/_testimonials.scss
+++ b/dev/scss/base/components/_testimonials.scss
@@ -14,6 +14,10 @@
 
 	.testimonial{
 		margin-bottom: 50px;
+
+		&:last-child{
+			margin-bottom: 0;
+		}
 		@include tablet{
 			margin-bottom: 50px;
 		}
