--- a/dev/scss/base/pages/_why.scss
+++ b/dev/scss/base/pages/_why.scss
@@ -8,6 +8,11 @@ div.template-why {
 			border: 1px solid $secondary-dark;
 			padding: 2em;
 			background-color: rgba(255,255,255,0.02);
+
+			@include mobile{
+				min-height: initial;
+			}
+
 			&:hover {
 				background-color: rgba(255,255,255,0.04);
 			}
@@ -16,18 +21,39 @@ div.template-why {
 			}
 			h2 {
 				color: $primary;
-				margin-top:1.5em;
+				margin-top: 1.5em;
+
+				@include mobile{
+					margin-bottom: 5px;
+				}
 			}
+
+			.number-container{
+				display: table;
+				width: 40px;
+				
+				@include mobile{
+					margin: 0 auto;
+					text-align: center;
+				}
+			}
+
 			.number {
-			  border: 1px solid $off-white;
-		    display: table-cell;
-		    border-radius: 100%;
-		    padding: 4px 15px;
-		    margin-bottom: 2em;
-		    color: $off-white;
-			}
-			.double {
-				padding: 4px 10px !important;
+				border: 1px solid $off-white;
+				display: table-cell;
+				vertical-align: middle;
+				width: 40px;
+				height: 40px;
+				border-radius: 100%;
+				padding: 10px;
+				line-height: 1px;
+				margin-bottom: 2em;
+				color: $off-white;
+				text-align: center;
+
+				@include mobile{
+					margin: 0 auto 2em auto;
+				}
 			}
 		}
 		.image1 {
@@ -52,6 +78,12 @@ div.template-why {
 			display: none;
 			@include tablet {
 				display: block;
+			}
+		}
+
+		@include mobile{ 
+			.image1, .image2, .image3, .image4{
+				display: none;
 			}
 		}
 	}
